--- a/package.json
+++ b/package.json
@@ -10,35 +10,35 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-community/viewpager": "5.0.11",
     "@react-native-google-signin/google-signin": "^12.2.1",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "cpf-cnpj-validator": "^1.0.3",
-    "expo": "~51.0.31",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.0",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-status-bar": "~2.0.0",
     "install": "^0.13.0",
     "moment": "^2.30.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^3.35.0",
-    "react-native-svg": "^15.2.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
