--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "5.0.11",
@@ -24,11 +24,13 @@
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-jwt-decode": "^1.0.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.16.1",
@@ -38,7 +40,8 @@
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2"
+    "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^15.1.2"
   },
   "private": true
 }
