--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-collapsible": "^1.6.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-jwt-decode": "^1.0.3",
     "react-native-masked-text": "^1.13.0",
