--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "5.0.11",
     "@react-native-google-signin/google-signin": "^12.2.1",
@@ -30,6 +30,7 @@
     "react-native": "0.76.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.2",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-jwt-decode": "^1.0.3",
     "react-native-masked-text": "^1.13.0",
